parser/test/corpus/definition_dec_integer.txt
=================================
Definition with integer parameter
=================================

define test i32 = 42

---

(start
    (definition
        (identifier)
        (type)
        (dec_integer_literal)
    )
)
