parser/test/corpus/definition_hex_integer.txt
=====================================
Definition with hex integer parameter
=====================================

define test i32 = 0x42

---

(start
    (definition
        (identifier)
        (type)
        (hex_integer_literal)
    )
)
