parser/test/corpus/definition_identifier.txt
==========================
Definition with identifier
==========================

define test i32 = ident

---

(start
    (definition
        (identifier)
        (type)
        (identifier)
    )
)
