parser/test/corpus/definition_string.txt
======================
Definition with string
======================

define test str = "example string"

---

(start
    (definition
        (identifier)
        (type)
        (str_literal)
    )
)
